fix dark mode

--- a/src/Components/Term/Term.module.scss
+++ b/src/Components/Term/Term.module.scss
@@ -76,11 +76,11 @@
   }
 
   .termIgnored, .termSkipped {
-    background: #424242;
+    background: #1e1e1e;
   }
 
   .termWellKnown {
-    background: #464646;
+    background: #242424;
   }
 
   .termUnknown {
